2007-11-13  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* DLD-FUNCTIONS/rand.cc (Frand): Update URL reference in doc string.

2007-11-12  David Bateman  <dbateman@free.fr>

	* graphics.h.in, graphics.cc (class text): Add the fontangle and
	fontweight properties. Add string_property class to handle the
	string radio values.

2007-11-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.17+.

2007-11-12  David Bateman  <dbateman@free.fr>

	* graphics.h.in, graphics.cc (class text): Add the fontname and
	fontsize properties. 

2007-11-10  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.17.
	(OCTAVE_API_VERSION): Now api-v29.
	(OCTAVE_RELEASE_DATE): Now 2007-11-10.

2007-11-09  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__gnuplot_raw__.l: Don't add atexit ("closeplot")
	to PKG_ADD file.

2007-11-09  David Bateman  <dbateman@free.fr>

	* graphics.cc, graphics.h.in (class patch): Add the field "keylabel".

	* data.cc (Fcputime) [__WIN32__]: Correct scaling of sys and usr times.

	* graphics.cc (is_handle): Handle must be a real scalar.

2007-11-09  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* data.cc (Fislogical): Fix typo in documentation entry.

2007-11-08  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__gnuplot_raw__.l (F__gnuplot_save_data__):
	Note obsolescence in doc string.
	(WARN_OBSOLETE): New macro
	(F__gnuplot_save_data__, Fgnuplot_command_plot,
	Fgnuplot_command_replot, Fgnuplot_command_splot,
	Fgnuplot_command_using, Fgnuplot_command_with,
	Fgnuplot_command_axes, Fgnuplot_command_title,
	Fgnuplot_command_end, Fgnuplot_use_title_option,
	F__clear_plot_window__, Fcloseplot, Fpurge_tmp_files,
	F__gnuplot_raw__, F__gnuplot_send_inline_data__, F__gnuplot_set__,
	F__gnuplot_show__, F__gnuplot_plot__, F__gnuplot_splot__,
	F__gnuplot_replot__): Use WARN_OBSOLETE.

2007-11-07  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/regexp.cc: Handle HAVE_PCRE_PCRE_H.  Check